<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ink.envoy.logindemo.AdminActivity">

    <de.codecrafters.tableview.TableView xmlns:table="http://schemas.android.com/apk/res-auto"
        android:id="@+id/userTableView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        table:layout_constraintLeft_toLeftOf="parent"
        table:layout_constraintRight_toRightOf="parent"
        table:layout_constraintTop_toTopOf="parent"
        table:tableView_columnCount="5" />

</android.support.constraint.ConstraintLayout>
